--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 
 <body>
-    <header>
-
-    </header>
     <div class="hero">
         <nav class="nav">
             <img src="./image/devLogo.png" class="logo" alt="Logo">
@@ -24,7 +21,17 @@
                 <li><a href="#">HIRE ME</a></li>
             </ul>
         </nav>
+        <div class="details">
+            <h1>I'm More <span>Prashant</span></h1>
+            <p>This is my official portfolio website to shows all details and work exiprince web dev</p>
+            <a href="#">Download CV</a>
+        </div>
+        <div class="images">
+            <img src="./image/shape.png" class="shape" alt="shape">
+            <img src="./image/DevIllus.png" class="girl" alt="Photo">
+        </div>
     </div>
+
 
 </body>
 
